# selex_construct

./: .gitignore  README.md  generate_report.py  make_test_data.sh  metadata.tsv  pyproject.toml
data/: 2025_07_17_TFs_ranges.tsv
docs/: Instructions.md
src/construct_report/: __main__.py  cli.py  pipeline.py  ranges.py  report.py
tests/: conftest.py  test_cli.py  test_pipeline.py  test_ranges.py
