[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "construct-report"
version = "0.1.0"
description = "Standalone HTML report generator for construct design review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
construct-report = "construct_report.cli:main"
construct-generate = "construct_report.cli:generate_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
